--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:33:51 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:34:34 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -169,7 +169,7 @@ E thru 9</td>
       <td class="greyout leftborder">Viktor Hovland(W) +3
 +3 thru 7</td>
       <td class="greyout">Sam Burns +6
-+3 thru 8</td>
++3 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
@@ -265,7 +265,7 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele +3
 +1 thru 7</td>
       <td class="greyout">Sam Burns +6
-+3 thru 8</td>
++3 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -316,22 +316,6 @@ Not started</td>
 E thru 6</td>
     </tr>
     <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-6</td>
-      <td>Corey Conners -3
--1 thru 12</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Webb Simpson E
-+1 thru 9</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td class="greyout leftborder">Jon Rahm(W) +1
--1 thru 7</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 7</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith -4
@@ -361,7 +345,7 @@ Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
 +3 thru 7</td>
       <td class="greyout">Sam Burns +6
-+3 thru 8</td>
++3 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -428,6 +412,22 @@ E thru 6</td>
 +1 thru 7</td>
     </tr>
     <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-5</td>
+      <td>Corey Conners -3
+-1 thru 12</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
+      <td>Jon Rahm(W) +1
+-1 thru 7</td>
+      <td class="greyout leftborder">Webb Simpson +1
++2 thru 10</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 7</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-5</td>
       <td>Scottie Scheffler(W) -3
@@ -455,7 +455,7 @@ Not started</td>
       <td>Brooks Koepka +3
 E thru 6</td>
       <td class="greyout leftborder">Sam Burns +6
-+3 thru 8</td>
++3 thru 9</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -585,7 +585,7 @@ E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +3
 +1 thru 7</td>
       <td class="greyout">Sam Burns +6
-+3 thru 8</td>
++3 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -617,7 +617,7 @@ E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +3
 +3 thru 7</td>
       <td class="greyout">Sam Burns +6
-+3 thru 8</td>
++3 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
@@ -713,7 +713,7 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 6</td>
       <td class="greyout">Sam Burns +6
-+3 thru 8</td>
++3 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -1015,7 +1015,7 @@ E thru 6</td>
       <td>Justin Thomas(W) +4
 Not started</td>
       <td class="greyout leftborder">Sam Burns +6
-+3 thru 8</td>
++3 thru 9</td>
       <td class="greyout">Justin Rose +9
 +5 thru 13</td>
     </tr>
@@ -1033,7 +1033,7 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Sam Burns +6
-+3 thru 8</td>
++3 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
