--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:39:36 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:40:20 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,6 +139,38 @@ body {
   </tr>
   </thead>
   <tbody>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-11</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 12</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 6</td>
+      <td class="greyout">Russell Henley +4
++3 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Mark MacKave</td>
+      <td class="bigbold">-11</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 12</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td class="greyout leftborder">Xander Schauffele(W) +3
++1 thru 7</td>
+      <td class="greyout">Viktor Hovland +3
++3 thru 7</td>
+    </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-11</td>
@@ -188,34 +220,18 @@ E thru 6</td>
 +1 thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-10</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 12</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 6</td>
-      <td class="greyout">Russell Henley +4
-+3 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">-9</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Corey Conners -3
 -1 thru 12</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Will Zalatoris E
+      <td>Patrick Cantlay -1
 +1 thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele(W) +3
-+1 thru 7</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td class="greyout leftborder">Jon Rahm(W) +1
+-1 thru 7</td>
       <td class="greyout">Viktor Hovland +3
 +3 thru 7</td>
     </tr>
@@ -236,20 +252,20 @@ E thru 6</td>
 +1 thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">Doug Muir</td>
       <td class="bigbold">-8</td>
       <td>Cameron Smith -4
 Not started</td>
-      <td>Corey Conners -3
--1 thru 12</td>
-      <td>Patrick Cantlay -1
-+1 thru 7</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td class="greyout leftborder">Jon Rahm(W) +1
+      <td>Scottie Scheffler(W) -3
+Not started</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Hideki Matsuyama E
+Not started</td>
+      <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 7</td>
-      <td class="greyout">Viktor Hovland +3
-+3 thru 7</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
@@ -268,20 +284,20 @@ Not started</td>
 +3 thru 9</td>
     </tr>
     <tr>
-      <td class="bigbold">Doug Muir</td>
+      <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith -4
 Not started</td>
-      <td>Scottie Scheffler(W) -3
-Not started</td>
-      <td>Hideki Matsuyama E
-Not started</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
+      <td>Corey Conners(W) -3
+-1 thru 12</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Jon Rahm +1
+-1 thru 7</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 7</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -316,20 +332,52 @@ Not started</td>
 E thru 6</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-6</td>
-      <td>Cameron Smith -4
+      <td>Scottie Scheffler -3
 Not started</td>
-      <td>Corey Conners(W) -3
--1 thru 12</td>
-      <td>Will Zalatoris E
+      <td>Patrick Cantlay -1
 +1 thru 7</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td class="greyout leftborder">Shane Lowry +1
+Not started</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-6</td>
+      <td>Corey Conners -3
+-1 thru 12</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Jon Rahm(W) +1
+-1 thru 7</td>
+      <td class="greyout leftborder">Webb Simpson +1
++2 thru 10</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler(W) -3
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 12</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
       <td>Jon Rahm +1
 -1 thru 7</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 7</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 6</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -380,22 +428,6 @@ Not started</td>
 +3 thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -1
-+1 thru 7</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td class="greyout leftborder">Shane Lowry +1
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">CRED</td>
       <td class="bigbold">-5</td>
       <td>Dustin Johnson -3
@@ -408,38 +440,6 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka(W) +3
 E thru 6</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 7</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-5</td>
-      <td>Corey Conners -3
--1 thru 12</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Jon Rahm(W) +1
--1 thru 7</td>
-      <td class="greyout leftborder">Webb Simpson +1
-+2 thru 10</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 7</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler(W) -3
-Not started</td>
-      <td>Corey Conners -3
--1 thru 12</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Jon Rahm +1
--1 thru 7</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 7</td>
       <td class="greyout">Xander Schauffele +3
 +1 thru 7</td>
     </tr>
@@ -476,6 +476,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Matthew Fitzpatrick -1
+E thru 6</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 6</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith -4
@@ -490,22 +506,6 @@ E thru 6</td>
 +1 thru 7</td>
       <td class="greyout">Billy Horschel +6
 +4 thru 8</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Matthew Fitzpatrick -1
-E thru 6</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 6</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -588,6 +588,22 @@ E thru 6</td>
 +3 thru 9</td>
     </tr>
     <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">-3</td>
+      <td>Corey Conners -3
+-1 thru 12</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
+      <td>Rory McIlroy +1
+E thru 6</td>
+      <td class="greyout leftborder">Xander Schauffele(W) +3
++1 thru 7</td>
+      <td class="greyout">Viktor Hovland +3
++3 thru 7</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -4
@@ -601,6 +617,22 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele +3
 +1 thru 7</td>
       <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Patrick Cantlay -1
++1 thru 7</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Brooks Koepka +3
+E thru 6</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 7</td>
+      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -636,52 +668,20 @@ E thru 6</td>
 +3 thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Grace</td>
+      <td class="bigbold">Jabby</td>
       <td class="bigbold">-2</td>
       <td>Corey Conners -3
 -1 thru 12</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
       <td>Rory McIlroy +1
 E thru 6</td>
-      <td class="greyout leftborder">Xander Schauffele(W) +3
-+1 thru 7</td>
-      <td class="greyout">Viktor Hovland +3
-+3 thru 7</td>
-    </tr>
-    <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Patrick Cantlay -1
-+1 thru 7</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Brooks Koepka +3
+      <td>Jon Rahm +1
+-1 thru 7</td>
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 6</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Bubba Watson E
--1 thru 10</td>
-      <td>Jon Rahm(W) +1
--1 thru 7</td>
-      <td>Rory McIlroy +1
-E thru 6</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 7</td>
-      <td class="greyout">Viktor Hovland +3
-+3 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -716,20 +716,52 @@ E thru 6</td>
 +3 thru 9</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
+      <td class="bigbold">Walk 1</td>
       <td class="bigbold">-1</td>
-      <td>Corey Conners -3
--1 thru 12</td>
-      <td>Will Zalatoris E
+      <td>Patrick Cantlay -1
 +1 thru 7</td>
-      <td>Rory McIlroy +1
-E thru 6</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
       <td>Jon Rahm +1
 -1 thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 6</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td class="greyout leftborder">Viktor Hovland(W) +3
++3 thru 7</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-1</td>
+      <td>Tiger Woods(W) -1
 Not started</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
+      <td>Rory McIlroy +1
+E thru 6</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 7</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 7</td>
+      <td>Rory McIlroy +1
+E thru 6</td>
+      <td>Jordan Spieth +1
+-1 thru 7</td>
+      <td class="greyout leftborder">Bubba Watson +2
++1 thru 11</td>
+      <td class="greyout">Viktor Hovland +3
++3 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -780,22 +812,6 @@ E thru 6</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">0</td>
-      <td>Patrick Cantlay -1
-+1 thru 7</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Jon Rahm +1
--1 thru 7</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +3
-+3 thru 7</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 7</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">0</td>
       <td>Patrick Cantlay -1
@@ -840,22 +856,6 @@ E thru 6</td>
 -1 thru 7</td>
       <td class="greyout leftborder">Xander Schauffele +3
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">0</td>
-      <td>Tiger Woods(W) -1
-Not started</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Rory McIlroy +1
-E thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 7</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -924,6 +924,22 @@ E thru 6</td>
 +1 thru 7</td>
     </tr>
     <tr>
+      <td class="bigbold">Wylie</td>
+      <td class="bigbold">2</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Brooks Koepka +3
+E thru 6</td>
+      <td>Xander Schauffele +3
++1 thru 7</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">NewCastle Magpies</td>
       <td class="bigbold">3</td>
       <td>Patrick Cantlay -1
@@ -938,22 +954,6 @@ E thru 6</td>
 +1 thru 7</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">3</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Jon Rahm +1
--1 thru 7</td>
-      <td>Patrick Reed +1
--1 thru 11</td>
-      <td>Jordan Spieth +1
--1 thru 7</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +3
-+3 thru 7</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -972,20 +972,52 @@ Not started</td>
 +3 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Wylie</td>
-      <td class="bigbold">3</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Brooks Koepka +3
-E thru 6</td>
-      <td>Xander Schauffele +3
-+1 thru 7</td>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">4</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Jon Rahm +1
+-1 thru 7</td>
+      <td>Jordan Spieth +1
+-1 thru 7</td>
+      <td>Viktor Hovland +3
++3 thru 7</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
+      <td class="greyout">Sam Burns +6
++3 thru 9</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">4</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
+      <td>Jon Rahm +1
+-1 thru 7</td>
+      <td>Jordan Spieth +1
+-1 thru 7</td>
+      <td>Patrick Reed +2
+E thru 12</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +3
++3 thru 7</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 6</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">4</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Jon Rahm(W) +1
+-1 thru 7</td>
+      <td>Jordan Spieth +1
+-1 thru 7</td>
+      <td>Viktor Hovland +3
++3 thru 7</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 6</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
@@ -1018,38 +1050,6 @@ Not started</td>
 +3 thru 9</td>
       <td class="greyout">Justin Rose +9
 +5 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">5</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Jon Rahm +1
--1 thru 7</td>
-      <td>Jordan Spieth +1
--1 thru 7</td>
-      <td>Viktor Hovland +3
-+3 thru 7</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Sam Burns +6
-+3 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">5</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Jon Rahm(W) +1
--1 thru 7</td>
-      <td>Jordan Spieth +1
--1 thru 7</td>
-      <td>Viktor Hovland +3
-+3 thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 6</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
