--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:39:36 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:40:20 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,17 +157,33 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-6</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay -1
 +1 thru 7</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
       <td>Tony Finau -1
 Not started</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
       <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Matthew Fitzpatrick -1
+E thru 6</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 6</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -188,22 +204,6 @@ E thru 6</td>
 +1 thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Matthew Fitzpatrick -1
-E thru 6</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 6</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-3</td>
       <td>Corey Conners -3
@@ -216,6 +216,22 @@ E thru 9</td>
 -1 thru 7</td>
       <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-3</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 6</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -284,20 +300,20 @@ E thru 6</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-2</td>
-      <td>Tony Finau -1
+      <td>Scottie Scheffler(W) -3
 Not started</td>
-      <td>Daniel Berger -1
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Jon Rahm +1
+-1 thru 7</td>
+      <td>Jordan Spieth +1
+-1 thru 7</td>
+      <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td class="greyout">Brooks Koepka +3
 E thru 6</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -312,22 +328,6 @@ E thru 8</td>
 -1 thru 7</td>
       <td class="greyout leftborder">Viktor Hovland +3
 +3 thru 7</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 6</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler(W) -3
-Not started</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Jon Rahm +1
--1 thru 7</td>
-      <td>Jordan Spieth +1
--1 thru 7</td>
-      <td class="greyout leftborder">Shane Lowry +1
-Not started</td>
       <td class="greyout">Brooks Koepka +3
 E thru 6</td>
     </tr>
@@ -381,13 +381,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Collin Morikawa E
 -1 thru 8</td>
       <td>Jon Rahm +1
 -1 thru 7</td>
-      <td>Patrick Reed +1
--1 thru 11</td>
+      <td>Patrick Reed +2
+E thru 12</td>
       <td>Viktor Hovland(W) +3
 +3 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka +3
