--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:46:47 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:47:30 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -508,6 +508,22 @@ E thru 7</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-5</td>
+      <td>Corey Conners -3
+-1 thru 13</td>
+      <td>Joaquin Niemann -3
+Not started</td>
+      <td>Brian Harman E
+-2 thru 2</td>
+      <td>Shane Lowry(W) +1
+Not started</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 7</td>
+      <td class="greyout">Sam Burns +6
++3 thru 9</td>
+    </tr>
+    <tr>
       <td class="bigbold">New Lu</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -4
@@ -680,22 +696,6 @@ E thru 8</td>
 -1 thru 8</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 7</td>
-      <td class="greyout">Sam Burns +6
-+3 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-3</td>
-      <td>Corey Conners -3
--1 thru 13</td>
-      <td>Joaquin Niemann -3
-Not started</td>
-      <td>Shane Lowry(W) +1
-Not started</td>
-      <td>Brian Harman +2
-E thru 1</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 7</td>
       <td class="greyout">Sam Burns +6
 +3 thru 9</td>
     </tr>
