--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:48:13 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:48:56 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -524,6 +524,38 @@ Not started</td>
 +3 thru 9</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-4</td>
+      <td>Corey Conners(W) -3
+-1 thru 13</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Robert MacIntyre +1
+E thru 15</td>
+      <td class="greyout leftborder">Jon Rahm +1
+-1 thru 8</td>
+      <td class="greyout">Jordan Spieth +1
+-1 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">-4</td>
+      <td>Corey Conners -3
+-1 thru 13</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Rory McIlroy +1
+E thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele(W) +3
++1 thru 7</td>
+      <td class="greyout">Viktor Hovland +3
++3 thru 7</td>
+    </tr>
+    <tr>
       <td class="bigbold">New Lu</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -4
@@ -588,6 +620,22 @@ E thru 7</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">-3</td>
+      <td>Patrick Cantlay -2
+E thru 8</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Jon Rahm +1
+-1 thru 8</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +3
++3 thru 7</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 7</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">-3</td>
       <td>Dustin Johnson -3
@@ -604,22 +652,6 @@ E thru 7</td>
 +3 thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-3</td>
-      <td>Corey Conners(W) -3
--1 thru 13</td>
-      <td>Daniel Berger -1
-Not started</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Robert MacIntyre +1
-E thru 15</td>
-      <td class="greyout leftborder">Jon Rahm +1
--1 thru 8</td>
-      <td class="greyout">Jordan Spieth +1
--1 thru 7</td>
-    </tr>
-    <tr>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -4
@@ -634,22 +666,6 @@ E thru 7</td>
 +1 thru 7</td>
       <td class="greyout">Sam Burns +6
 +3 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">-3</td>
-      <td>Corey Conners -3
--1 thru 13</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Rory McIlroy +1
-E thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele(W) +3
-+1 thru 7</td>
-      <td class="greyout">Viktor Hovland +3
-+3 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -700,20 +716,52 @@ E thru 7</td>
 +3 thru 9</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">-3</td>
+      <td>Patrick Cantlay -2
+E thru 8</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Jon Rahm(W) +1
+-1 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 7</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">-2</td>
       <td>Patrick Cantlay -2
 E thru 8</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
+      <td>Collin Morikawa(W) -1
+-2 thru 9</td>
+      <td>Hideki Matsuyama E
+Not started</td>
       <td>Jon Rahm +1
 -1 thru 8</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +3
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 7</td>
+      <td class="greyout">Paul Casey
+Out With Injury</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-2</td>
+      <td>Tiger Woods(W) -1
+Not started</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Rory McIlroy +1
+E thru 7</td>
+      <td class="greyout leftborder">Viktor Hovland +3
 +3 thru 7</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -748,22 +796,6 @@ E thru 7</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-2</td>
-      <td>Patrick Cantlay -2
-E thru 8</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Jon Rahm(W) +1
--1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 7</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 7</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler -3
@@ -780,22 +812,6 @@ E thru 7</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">-1</td>
-      <td>Patrick Cantlay -2
-E thru 8</td>
-      <td>Collin Morikawa(W) E
--1 thru 8</td>
-      <td>Hideki Matsuyama E
-Not started</td>
-      <td>Jon Rahm +1
--1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 7</td>
-      <td class="greyout">Paul Casey
-Out With Injury</td>
-    </tr>
-    <tr>
       <td class="bigbold">Philip Dale</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler -3
@@ -809,22 +825,6 @@ E thru 7</td>
       <td class="greyout leftborder">Xander Schauffele +3
 +1 thru 7</td>
       <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-1</td>
-      <td>Tiger Woods(W) -1
-Not started</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Rory McIlroy +1
-E thru 7</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 7</td>
-      <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
@@ -893,11 +893,11 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
       <td>Patrick Cantlay -2
 E thru 8</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
       <td>Jordan Spieth +1
 -1 thru 7</td>
       <td>Brooks Koepka +3
@@ -922,6 +922,22 @@ Not started</td>
 E thru 7</td>
       <td class="greyout">Xander Schauffele +3
 +1 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">2</td>
+      <td>Collin Morikawa(W) -1
+-2 thru 9</td>
+      <td>Tiger Woods -1
+Not started</td>
+      <td>Rory McIlroy +1
+E thru 7</td>
+      <td>Viktor Hovland +3
++3 thru 7</td>
+      <td class="greyout leftborder">Justin Thomas +4
+Not started</td>
+      <td class="greyout">Gary Woodland +6
++3 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -956,20 +972,20 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">3</td>
-      <td>Tiger Woods -1
-Not started</td>
-      <td>Collin Morikawa(W) E
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Jon Rahm +1
 -1 thru 8</td>
-      <td>Rory McIlroy +1
-E thru 7</td>
-      <td>Viktor Hovland +3
+      <td>Jordan Spieth +1
+-1 thru 7</td>
+      <td>Patrick Reed +2
+E thru 12</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +3
 +3 thru 7</td>
-      <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
-      <td class="greyout">Gary Woodland +6
-+3 thru 14</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
@@ -1002,22 +1018,6 @@ E thru 8</td>
 Not started</td>
       <td class="greyout">Sam Burns +6
 +3 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">4</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Jon Rahm +1
--1 thru 8</td>
-      <td>Jordan Spieth +1
--1 thru 7</td>
-      <td>Patrick Reed +2
-E thru 12</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +3
-+3 thru 7</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
