--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:48:13 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:48:56 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -173,13 +173,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Patrick Cantlay -2
 E thru 8</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
       <td>Rory McIlroy +1
 E thru 7</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -221,13 +221,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-4</td>
       <td>Sungjae Im -4
 +1 thru 10</td>
       <td>Patrick Cantlay -2
 E thru 8</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
       <td>Viktor Hovland(W) +3
 +3 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -237,19 +237,35 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-4</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
       <td>Will Zalatoris -1
 E thru 8</td>
       <td>Tony Finau -1
 Not started</td>
       <td>Daniel Berger -1
 Not started</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 7</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-4</td>
+      <td>Corey Conners(W) -3
+-1 thru 13</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Jon Rahm +1
+-1 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 7</td>
+      <td class="greyout">Robert MacIntyre +1
+E thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -268,20 +284,20 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">-3</td>
-      <td>Corey Conners(W) -3
--1 thru 13</td>
-      <td>Daniel Berger -1
+      <td>Patrick Cantlay -2
+E thru 8</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Tony Finau -1
 Not started</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Jon Rahm +1
+      <td>Jon Rahm(W) +1
 -1 thru 8</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 7</td>
-      <td class="greyout">Robert MacIntyre +1
-E thru 15</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -332,22 +348,6 @@ Not started</td>
 E thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-2</td>
-      <td>Patrick Cantlay -2
-E thru 8</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Jon Rahm(W) +1
--1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 7</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 7</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">1</td>
       <td>Dustin Johnson -3
@@ -381,9 +381,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">6</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
+      <td class="bigbold">5</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
       <td>Jon Rahm +1
 -1 thru 8</td>
       <td>Patrick Reed +2
