--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:51:06 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:51:49 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -393,7 +393,7 @@ E thru 12</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 7</td>
       <td class="greyout">Luke List +5
-Not started</td>
+E thru 1</td>
     </tr>
   </tbody>
 </table>
