--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:56:07 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:56:50 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,6 +172,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-6</td>
+      <td>Sungjae Im -4
++1 thru 11</td>
+      <td>Patrick Cantlay -2
+E thru 8</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Viktor Hovland(W) +1
++1 thru 8</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 7</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -4
@@ -186,6 +202,22 @@ E thru 7</td>
 E thru 7</td>
       <td class="greyout">Xander Schauffele +3
 +1 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Joaquin Niemann -3
+Not started</td>
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td>Rory McIlroy +1
+E thru 7</td>
+      <td class="greyout leftborder">Tommy Fleetwood(W) +3
+Not started</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -204,6 +236,22 @@ E thru 7</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 13</td>
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td>Jordan Spieth +1
+-1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 7</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-4</td>
       <td>Corey Conners -3
@@ -217,22 +265,6 @@ E thru 9</td>
       <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
       <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-4</td>
-      <td>Sungjae Im -4
-+1 thru 11</td>
-      <td>Patrick Cantlay -2
-E thru 8</td>
-      <td>Collin Morikawa -1
--2 thru 9</td>
-      <td>Viktor Hovland(W) +3
-+3 thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 7</td>
-      <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
@@ -268,22 +300,6 @@ Not started</td>
 E thru 15</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Joaquin Niemann -3
-Not started</td>
-      <td>Rory McIlroy +1
-E thru 7</td>
-      <td>Tommy Fleetwood(W) +3
-Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 7</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">-3</td>
       <td>Patrick Cantlay -2
@@ -298,22 +314,6 @@ Not started</td>
 -1 thru 7</td>
       <td class="greyout">Brooks Koepka +3
 E thru 7</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 13</td>
-      <td>Jordan Spieth +1
--1 thru 7</td>
-      <td>Viktor Hovland +3
-+3 thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -340,10 +340,10 @@ E thru 8</td>
 +1 thru 9</td>
       <td>Jordan Spieth(W) +1
 -1 thru 7</td>
-      <td>Jon Rahm +1
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +1
 -1 thru 8</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 7</td>
       <td class="greyout">Brooks Koepka +3
 E thru 7</td>
     </tr>
@@ -381,15 +381,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">3</td>
       <td>Collin Morikawa -1
 -2 thru 9</td>
+      <td>Viktor Hovland(W) +1
++1 thru 8</td>
       <td>Jon Rahm +1
 -1 thru 8</td>
       <td>Patrick Reed +2
 E thru 12</td>
-      <td>Viktor Hovland(W) +3
-+3 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 7</td>
       <td class="greyout">Luke List +5
