--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:56:07 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:56:50 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,10 +166,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 E thru 8</td>
-      <td class="greyout leftborder">Xander Schauffele(W) +3
+      <td class="greyout leftborder">Viktor Hovland +1
++1 thru 8</td>
+      <td class="greyout">Xander Schauffele(W) +3
 +1 thru 7</td>
-      <td class="greyout">Viktor Hovland +3
-+3 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -200,8 +200,8 @@ E thru 8</td>
 E thru 8</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
 -1 thru 8</td>
-      <td class="greyout">Viktor Hovland +3
-+3 thru 7</td>
+      <td class="greyout">Viktor Hovland +1
++1 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -214,8 +214,8 @@ Not started</td>
 Not started</td>
       <td>Tyrrell Hatton E
 E thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +3
-+3 thru 7</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +1
++1 thru 8</td>
       <td class="greyout">Sam Burns +6
 +3 thru 9</td>
     </tr>
@@ -276,10 +276,10 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay -2
 E thru 8</td>
-      <td>Shane Lowry +1
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 7</td>
       <td class="greyout">Brooks Koepka +3
 E thru 7</td>
     </tr>
@@ -340,10 +340,10 @@ E thru 7</td>
 Not started</td>
       <td>Patrick Cantlay(W) -2
 E thru 8</td>
-      <td>Jon Rahm +1
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +1
 -1 thru 8</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 7</td>
       <td class="greyout">Sam Burns +6
 +3 thru 9</td>
     </tr>
@@ -452,12 +452,12 @@ Not started</td>
 -1 thru 13</td>
       <td>Hideki Matsuyama E
 Not started</td>
-      <td>Shane Lowry +1
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td class="greyout">Jon Rahm +1
 -1 thru 8</td>
-      <td class="greyout">Viktor Hovland +3
-+3 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -474,6 +474,22 @@ Not started</td>
 E thru 7</td>
       <td class="greyout">Xander Schauffele +3
 +1 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 13</td>
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td>Jordan Spieth +1
+-1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 7</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -518,8 +534,8 @@ Not started</td>
 -2 thru 2</td>
       <td>Shane Lowry(W) +1
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 7</td>
+      <td class="greyout leftborder">Viktor Hovland +1
++1 thru 8</td>
       <td class="greyout">Sam Burns +6
 +3 thru 9</td>
     </tr>
@@ -548,12 +564,12 @@ E thru 15</td>
 -2 thru 9</td>
       <td>Will Zalatoris -1
 E thru 8</td>
-      <td>Rory McIlroy +1
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td class="greyout leftborder">Rory McIlroy +1
 E thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele(W) +3
+      <td class="greyout">Xander Schauffele(W) +3
 +1 thru 7</td>
-      <td class="greyout">Viktor Hovland +3
-+3 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -588,6 +604,22 @@ E thru 7</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 8</td>
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 7</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -4
@@ -604,6 +636,22 @@ E thru 7</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 8</td>
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td>Rory McIlroy +1
+E thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 7</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">-3</td>
       <td>Patrick Cantlay -2
@@ -612,10 +660,10 @@ E thru 8</td>
 -2 thru 9</td>
       <td>Will Zalatoris -1
 E thru 8</td>
-      <td>Jon Rahm +1
+      <td>Viktor Hovland(W) +1
++1 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +1
 -1 thru 8</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +3
-+3 thru 7</td>
       <td class="greyout">Xander Schauffele +3
 +1 thru 7</td>
     </tr>
@@ -634,22 +682,6 @@ E thru 7</td>
 +1 thru 7</td>
       <td class="greyout">Sam Burns +6
 +3 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 13</td>
-      <td>Jordan Spieth +1
--1 thru 7</td>
-      <td>Viktor Hovland +3
-+3 thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -708,12 +740,12 @@ E thru 8</td>
 +1 thru 9</td>
       <td>Rory McIlroy(W) +1
 E thru 7</td>
-      <td>Jon Rahm +1
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +1
 -1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td class="greyout">Jordan Spieth +1
 -1 thru 7</td>
-      <td class="greyout">Viktor Hovland +3
-+3 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
@@ -740,10 +772,10 @@ Not started</td>
 -2 thru 9</td>
       <td>Will Zalatoris -1
 E thru 8</td>
-      <td>Rory McIlroy +1
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td class="greyout leftborder">Rory McIlroy +1
 E thru 7</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 7</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -764,22 +796,6 @@ E thru 7</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 8</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td>Viktor Hovland +3
-+3 thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 7</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-2</td>
       <td>Patrick Cantlay -2
@@ -788,24 +804,24 @@ E thru 8</td>
 +1 thru 9</td>
       <td>Jordan Spieth(W) +1
 -1 thru 7</td>
-      <td>Jon Rahm +1
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +1
 -1 thru 8</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 7</td>
       <td class="greyout">Brooks Koepka +3
 E thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-1</td>
-      <td>Scottie Scheffler -3
-Not started</td>
       <td>Patrick Cantlay -2
 E thru 8</td>
-      <td>Rory McIlroy +1
-E thru 7</td>
-      <td>Viktor Hovland +3
-+3 thru 7</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td>Jon Rahm +1
+-1 thru 8</td>
       <td class="greyout leftborder">Xander Schauffele +3
 +1 thru 7</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -834,14 +850,30 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm(W) +1
 -1 thru 8</td>
+      <td>Viktor Hovland +1
++1 thru 8</td>
       <td>Rory McIlroy +1
 E thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 7</td>
+      <td class="greyout">Bubba Watson +2
++1 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 8</td>
+      <td>Viktor Hovland +1
++1 thru 8</td>
       <td>Jordan Spieth +1
 -1 thru 7</td>
-      <td class="greyout leftborder">Bubba Watson +2
-+1 thru 11</td>
-      <td class="greyout">Viktor Hovland +3
-+3 thru 7</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 7</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -860,6 +892,22 @@ E thru 7</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">0</td>
+      <td>Collin Morikawa(W) -1
+-2 thru 9</td>
+      <td>Tiger Woods -1
+Not started</td>
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td>Rory McIlroy +1
+E thru 7</td>
+      <td class="greyout leftborder">Justin Thomas +4
+Not started</td>
+      <td class="greyout">Gary Woodland +6
++3 thru 14</td>
+    </tr>
+    <tr>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">0</td>
       <td>Corey Conners -3
@@ -876,20 +924,20 @@ E thru 7</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">1</td>
-      <td>Patrick Cantlay -2
-E thru 8</td>
-      <td>Daniel Berger -1
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler -3
 Not started</td>
-      <td>Jon Rahm +1
+      <td>Jon Rahm(W) +1
 -1 thru 8</td>
-      <td>Viktor Hovland +3
-+3 thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +3
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td>Rory McIlroy +1
+E thru 7</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 7</td>
+      <td class="greyout">Xander Schauffele +3
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
@@ -908,52 +956,52 @@ E thru 7</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">2</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Jon Rahm(W) +1
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td>Jon Rahm +1
 -1 thru 8</td>
       <td>Jordan Spieth +1
 -1 thru 7</td>
-      <td>Viktor Hovland +3
-+3 thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 7</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout">Sam Burns +6
++3 thru 9</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">2</td>
-      <td>Collin Morikawa(W) -1
+      <td>Collin Morikawa -1
 -2 thru 9</td>
-      <td>Tiger Woods -1
-Not started</td>
-      <td>Rory McIlroy +1
+      <td>Viktor Hovland(W) +1
++1 thru 8</td>
+      <td>Jon Rahm +1
+-1 thru 8</td>
+      <td>Jordan Spieth +1
+-1 thru 7</td>
+      <td class="greyout leftborder">Patrick Reed +2
+E thru 12</td>
+      <td class="greyout">Brooks Koepka +3
 E thru 7</td>
-      <td>Viktor Hovland +3
-+3 thru 7</td>
-      <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
-      <td class="greyout">Gary Woodland +6
-+3 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">2</td>
-      <td>Scottie Scheffler -3
-Not started</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
       <td>Jon Rahm(W) +1
 -1 thru 8</td>
-      <td>Rory McIlroy +1
-E thru 7</td>
-      <td>Viktor Hovland +3
-+3 thru 7</td>
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td>Jordan Spieth +1
+-1 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 7</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
@@ -972,22 +1020,6 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">3</td>
-      <td>Collin Morikawa -1
--2 thru 9</td>
-      <td>Jon Rahm +1
--1 thru 8</td>
-      <td>Jordan Spieth +1
--1 thru 7</td>
-      <td>Patrick Reed +2
-E thru 12</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +3
-+3 thru 7</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 7</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">3</td>
       <td>Patrick Cantlay(W) -2
@@ -1000,38 +1032,6 @@ E thru 7</td>
 E thru 7</td>
       <td class="greyout leftborder">Xander Schauffele +3
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">4</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Jon Rahm +1
--1 thru 8</td>
-      <td>Jordan Spieth +1
--1 thru 7</td>
-      <td>Viktor Hovland +3
-+3 thru 7</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Sam Burns +6
-+3 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">4</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Jon Rahm(W) +1
--1 thru 8</td>
-      <td>Jordan Spieth +1
--1 thru 7</td>
-      <td>Viktor Hovland +3
-+3 thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 7</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -1053,13 +1053,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">6</td>
+      <td>Viktor Hovland +1
++1 thru 8</td>
       <td>Jon Rahm +1
 -1 thru 8</td>
       <td>Jordan Spieth +1
 -1 thru 7</td>
-      <td>Viktor Hovland +3
-+3 thru 7</td>
       <td>Brooks Koepka +3
 E thru 7</td>
       <td class="greyout leftborder">Xander Schauffele +3
@@ -1069,13 +1069,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">6</td>
+      <td>Viktor Hovland +1
++1 thru 8</td>
       <td>Jon Rahm +1
 -1 thru 8</td>
       <td>Jordan Spieth +1
 -1 thru 7</td>
-      <td>Viktor Hovland +3
-+3 thru 7</td>
       <td>Xander Schauffele +3
 +1 thru 7</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
@@ -1085,11 +1085,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">10</td>
+      <td class="bigbold">8</td>
       <td>Jon Rahm(W) +1
 -1 thru 8</td>
-      <td>Viktor Hovland +3
-+3 thru 7</td>
+      <td>Viktor Hovland +1
++1 thru 8</td>
       <td>Brooks Koepka +3
 E thru 7</td>
       <td>Xander Schauffele +3
