--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:58:16 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:58:59 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -168,8 +168,8 @@ Not started</td>
 E thru 8</td>
       <td class="greyout leftborder">Viktor Hovland +1
 +1 thru 8</td>
-      <td class="greyout">Xander Schauffele(W) +3
-+1 thru 7</td>
+      <td class="greyout">Xander Schauffele(W) +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -204,22 +204,6 @@ E thru 8</td>
 +1 thru 8</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-10</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 13</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Tyrrell Hatton E
-E thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +1
-+1 thru 8</td>
-      <td class="greyout">Sam Burns +6
-+3 thru 10</td>
-    </tr>
-    <tr>
       <td class="bigbold">Luke Watson</td>
       <td class="bigbold">-10</td>
       <td>Cameron Smith(W) -4
@@ -232,8 +216,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 7</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -248,8 +232,24 @@ E thru 8</td>
 E thru 7</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 7</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 2</td>
+      <td class="bigbold">-9</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 13</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Viktor Hovland(W) +1
++1 thru 8</td>
+      <td class="greyout leftborder">Tyrrell Hatton +1
++1 thru 10</td>
+      <td class="greyout">Sam Burns +6
++3 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -264,8 +264,8 @@ E thru 8</td>
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 7</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -310,8 +310,8 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm(W) +1
 -1 thru 8</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 8</td>
       <td class="greyout">Sam Burns +6
 +3 thru 10</td>
     </tr>
@@ -392,8 +392,8 @@ E thru 8</td>
 -1 thru 8</td>
       <td class="greyout leftborder">Webb Simpson +1
 +2 thru 11</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -408,8 +408,8 @@ E thru 8</td>
 -1 thru 8</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 7</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">BCREAMED</td>
@@ -438,8 +438,8 @@ Not started</td>
 E thru 8</td>
       <td>Brooks Koepka +3
 E thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 8</td>
       <td class="greyout">Billy Horschel +6
 +4 thru 9</td>
     </tr>
@@ -472,8 +472,8 @@ E thru 8</td>
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka(W) +3
 E thru 7</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -486,8 +486,8 @@ Not started</td>
 +1 thru 8</td>
       <td>Jordan Spieth +1
 -1 thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 8</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -502,8 +502,8 @@ Not started</td>
 Not started</td>
       <td>Marc Leishman +2
 +1 thru 11</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 8</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -568,8 +568,8 @@ E thru 8</td>
 +1 thru 8</td>
       <td class="greyout leftborder">Rory McIlroy +1
 E thru 7</td>
-      <td class="greyout">Xander Schauffele(W) +3
-+1 thru 7</td>
+      <td class="greyout">Xander Schauffele(W) +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -582,10 +582,10 @@ E thru 8</td>
 E thru 8</td>
       <td>Brooks Koepka +3
 E thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -630,8 +630,8 @@ Not started</td>
 Not started</td>
       <td>Rory McIlroy(W) +1
 E thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 8</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -646,10 +646,10 @@ E thru 8</td>
 +1 thru 8</td>
       <td>Rory McIlroy +1
 E thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -664,8 +664,8 @@ E thru 8</td>
 +1 thru 8</td>
       <td class="greyout leftborder">Jon Rahm +1
 -1 thru 8</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
@@ -678,8 +678,8 @@ Not started</td>
 -1 thru 8</td>
       <td>Brooks Koepka +3
 E thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 8</td>
       <td class="greyout">Sam Burns +6
 +3 thru 10</td>
     </tr>
@@ -822,10 +822,10 @@ Not started</td>
 +1 thru 8</td>
       <td>Jon Rahm +1
 -1 thru 8</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Philip Dale</td>
@@ -838,10 +838,10 @@ E thru 8</td>
 -1 thru 7</td>
       <td>Brooks Koepka +3
 E thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -872,8 +872,8 @@ Not started</td>
 -1 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 7</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -918,8 +918,8 @@ Not started</td>
 E thru 7</td>
       <td>Jordan Spieth +1
 -1 thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 8</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -936,8 +936,8 @@ Not started</td>
 E thru 7</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 7</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
@@ -950,10 +950,10 @@ E thru 8</td>
 -1 thru 7</td>
       <td>Brooks Koepka +3
 E thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
@@ -1004,22 +1004,6 @@ E thru 7</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Wylie</td>
-      <td class="bigbold">2</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Brooks Koepka +3
-E thru 7</td>
-      <td>Xander Schauffele +3
-+1 thru 7</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">3</td>
       <td>Patrick Cantlay(W) -2
@@ -1030,22 +1014,38 @@ E thru 7</td>
 -1 thru 8</td>
       <td>Brooks Koepka +3
 E thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 8</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Wylie</td>
+      <td class="bigbold">3</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Will Zalatoris -1
+E thru 8</td>
+      <td>Brooks Koepka +3
+E thru 7</td>
+      <td>Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 8</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Benjac</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">5</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Rory McIlroy +1
 E thru 7</td>
-      <td>Xander Schauffele +3
-+1 thru 7</td>
       <td>Justin Thomas(W) +4
 Not started</td>
+      <td>Xander Schauffele +4
++2 thru 8</td>
       <td class="greyout leftborder">Sam Burns +6
 +3 thru 10</td>
       <td class="greyout">Justin Rose +8
@@ -1062,38 +1062,38 @@ Not started</td>
 -1 thru 7</td>
       <td>Brooks Koepka +3
 E thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Viktor Hovland +1
 +1 thru 8</td>
       <td>Jon Rahm +1
 -1 thru 8</td>
       <td>Jordan Spieth +1
 -1 thru 7</td>
-      <td>Xander Schauffele +3
-+1 thru 7</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
+      <td>Justin Thomas(W) +4
 Not started</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 8</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Jon Rahm(W) +1
 -1 thru 8</td>
       <td>Viktor Hovland +1
 +1 thru 8</td>
       <td>Brooks Koepka +3
 E thru 7</td>
-      <td>Xander Schauffele +3
-+1 thru 7</td>
+      <td>Xander Schauffele +4
++2 thru 8</td>
       <td class="greyout leftborder">Justin Thomas +4
 Not started</td>
       <td class="greyout">Louis Oosthuizen
