--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:58:16 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:58:59 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,8 +150,8 @@ Not started</td>
 -1 thru 13</td>
       <td>Jordan Spieth +1
 -1 thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 8</td>
       <td class="greyout">Sam Burns +6
 +3 thru 10</td>
     </tr>
@@ -200,8 +200,8 @@ E thru 8</td>
 E thru 7</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 7</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -246,25 +246,9 @@ Not started</td>
 +1 thru 8</td>
       <td>Jordan Spieth +1
 -1 thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 8</td>
       <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-4</td>
-      <td>Corey Conners -3
--1 thru 13</td>
-      <td>Patrick Cantlay -2
-E thru 8</td>
-      <td>Tyrrell Hatton E
-E thru 9</td>
-      <td>Jon Rahm +1
--1 thru 8</td>
-      <td class="greyout leftborder">Shane Lowry +1
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -298,6 +282,22 @@ Not started</td>
 -1 thru 7</td>
       <td class="greyout">Robert MacIntyre +1
 E thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-3</td>
+      <td>Corey Conners -3
+-1 thru 13</td>
+      <td>Patrick Cantlay -2
+E thru 8</td>
+      <td>Jon Rahm +1
+-1 thru 8</td>
+      <td>Tyrrell Hatton +1
++1 thru 10</td>
+      <td class="greyout leftborder">Shane Lowry +1
+Not started</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -349,33 +349,17 @@ E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Corey Conners -3
 -1 thru 13</td>
       <td>Dustin Johnson -2
 +1 thru 9</td>
-      <td>Xander Schauffele(W) +3
-+1 thru 7</td>
+      <td>Xander Schauffele(W) +4
++2 thru 8</td>
       <td>Justin Thomas +4
 Not started</td>
       <td class="greyout leftborder">Russell Henley +4
 +3 thru 13</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">2</td>
-      <td>Corey Conners -3
--1 thru 13</td>
-      <td>Jon Rahm +1
--1 thru 8</td>
-      <td>Jordan Spieth +1
--1 thru 7</td>
-      <td>Xander Schauffele +3
-+1 thru 7</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -394,6 +378,22 @@ E thru 12</td>
 E thru 7</td>
       <td class="greyout">Luke List +5
 E thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Adam Ryan</td>
+      <td class="bigbold">3</td>
+      <td>Corey Conners -3
+-1 thru 13</td>
+      <td>Jon Rahm +1
+-1 thru 8</td>
+      <td>Jordan Spieth +1
+-1 thru 7</td>
+      <td>Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 8</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
   </tbody>
 </table>
