--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:08:19 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:09:02 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -181,7 +181,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 E thru 9</td>
       <td>Matthew Fitzpatrick -1
-E thru 7</td>
+E thru 8</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 7</td>
       <td class="greyout">Xander Schauffele +4
@@ -508,22 +508,6 @@ Not started</td>
 +2 thru 8</td>
     </tr>
     <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-5</td>
-      <td>Corey Conners -3
--1 thru 14</td>
-      <td>Joaquin Niemann -3
-Not started</td>
-      <td>Brian Harman E
--2 thru 2</td>
-      <td>Shane Lowry(W) +1
-Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 8</td>
-      <td class="greyout">Sam Burns +6
-+3 thru 10</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-4</td>
       <td>Corey Conners(W) -3
@@ -545,7 +529,7 @@ Not started</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Matthew Fitzpatrick -1
-E thru 7</td>
+E thru 8</td>
       <td>Will Zalatoris E
 +1 thru 9</td>
       <td>Shane Lowry +1
@@ -602,6 +586,22 @@ E thru 8</td>
 +2 thru 8</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-4</td>
+      <td>Corey Conners -3
+-1 thru 14</td>
+      <td>Joaquin Niemann -3
+Not started</td>
+      <td>Shane Lowry(W) +1
+Not started</td>
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td class="greyout leftborder">Brian Harman +2
+E thru 3</td>
+      <td class="greyout">Sam Burns +6
++3 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -675,7 +675,7 @@ Not started</td>
       <td>Tony Finau -1
 Not started</td>
       <td>Matthew Fitzpatrick -1
-E thru 7</td>
+E thru 8</td>
       <td>Shane Lowry +1
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth +1
