--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:13:20 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:14:03 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -149,7 +149,7 @@ Not started</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Talor Gooch E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 8</td>
       <td class="greyout">Xander Schauffele +4
@@ -403,7 +403,7 @@ Not started</td>
       <td>Corey Conners -3
 -1 thru 14</td>
       <td>Talor Gooch E
-Not started</td>
+E thru 1</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
@@ -856,8 +856,8 @@ Not started</td>
 E thru 8</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 8</td>
-      <td class="greyout">Bubba Watson +2
-+1 thru 12</td>
+      <td class="greyout">Bubba Watson +1
+E thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
